Update full-stack admin dashboard with auth, persistence, and UI improvements
- Add JWT authentication with login/logout flow
- Switch from in-memory to H2/JSON file persistence
- Redesign frontend UI with improved navigation and forms
- Remove deprecated modules (Promos, Redemptions, IPs)
- Add account cooldown, monitor system, and sensitive data encryption
- Update .gitignore to exclude temp files and tools

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>