@@ -1,48 +1,88 @@
 package com.firstapi.backend.service;
 
+import com.firstapi.backend.common.CurrentSessionHolder;
 import com.firstapi.backend.model.DashboardData;
-import com.firstapi.backend.model.DashboardData.AlertRow;
 import com.firstapi.backend.model.DashboardData.ModelShare;
 import com.firstapi.backend.model.DashboardData.StatCard;
 import com.firstapi.backend.model.DashboardData.TrendPoint;
+import com.firstapi.backend.repository.*;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 @Service
 public class DashboardService {
 
+    private final UserRepository userRepository;
+    private final AccountRepository accountRepository;
+    private final SubscriptionRepository subscriptionRepository;
+    private final GroupRepository groupRepository;
+    private final MyApiKeysRepository myApiKeysRepository;
+    private final IpRepository ipRepository;
+    private final AnnouncementRepository announcementRepository;
+    private final RelayRecordRepository relayRecordRepository;
+
+    public DashboardService(UserRepository userRepository,
+                            AccountRepository accountRepository,
+                            SubscriptionRepository subscriptionRepository,
+                            GroupRepository groupRepository,
+                            MyApiKeysRepository myApiKeysRepository,
+                            IpRepository ipRepository,
+                            AnnouncementRepository announcementRepository,
+                            RelayRecordRepository relayRecordRepository) {
+        this.userRepository = userRepository;
+        this.accountRepository = accountRepository;
+        this.subscriptionRepository = subscriptionRepository;
+        this.groupRepository = groupRepository;
+        this.myApiKeysRepository = myApiKeysRepository;
+        this.ipRepository = ipRepository;
+        this.announcementRepository = announcementRepository;
+        this.relayRecordRepository = relayRecordRepository;
+    }
+
     public DashboardData getDashboard() {
+        int apiKeyCount = myApiKeysRepository.countByOwnerId(CurrentSessionHolder.require().getId());
+        int accountCount = accountRepository.findAll().size();
+        int userCount = userRepository.findAll().size();
+        int subscriptionCount = subscriptionRepository.findAll().size();
+        int groupCount = groupRepository.findAll().size();
+        int ipCount = ipRepository.findAll().size();
+        int announcementCount = announcementRepository.findAll().size();
+
         DashboardData data = new DashboardData();
-        data.stats = Arrays.asList(
-                new StatCard("API 密钥", "38", "+12% 较上周", "key", "#00f2ff"),
-                new StatCard("活跃账号", "6", "系统运行正常", "shield", "#3b82f6"),
-                new StatCard("今日请求", "2,596", "并发峰值: 120", "activity", "#10b981"),
-                new StatCard("注册用户", "22", "今日新增: 2", "users", "#8b5cf6"),
-                new StatCard("今日流量", "185M", "Tokens 消耗", "box", "#f59e0b"),
-                new StatCard("累计消耗", "5.21B", "Tokens 总计", "database", "#ef4444"),
-                new StatCard("响应性能", "420ms", "平均延迟", "zap", "#00f2ff"),
-                new StatCard("系统在线", "99.9%", "SLA 指标", "clock", "#10b981")
+        data.stats = List.of(
+                new StatCard("API 密钥", String.valueOf(apiKeyCount), "全部密钥", "key", "#00f2ff"),
+                new StatCard("活跃账户", String.valueOf(accountCount), "账户总数", "shield", "#3b82f6"),
+                new StatCard("注册用户", String.valueOf(userCount), "用户总数", "users", "#8b5cf6"),
+                new StatCard("订阅数量", String.valueOf(subscriptionCount), "订阅总数", "activity", "#10b981"),
+                new StatCard("用户分组", String.valueOf(groupCount), "分组总数", "box", "#f59e0b"),
+                new StatCard("IP 节点", String.valueOf(ipCount), "节点总数", "zap", "#00f2ff"),
+                new StatCard("系统公告", String.valueOf(announcementCount), "公告总数", "database", "#ef4444")
         );
-        data.modelDistribution = Arrays.asList(
-                new ModelShare("GPT-4o", 45, "#00f2ff"),
-                new ModelShare("Claude 3.5", 30, "#3b82f6"),
-                new ModelShare("Gemini 1.5", 15, "#10b981"),
-                new ModelShare("Llama 3", 10, "#8b5cf6")
-        );
-        data.trends = Arrays.asList(
-                new TrendPoint("00:00", 120, 45),
-                new TrendPoint("04:00", 80, 30),
-                new TrendPoint("08:00", 250, 90),
-                new TrendPoint("12:00", 450, 180),
-                new TrendPoint("16:00", 380, 140),
-                new TrendPoint("20:00", 520, 210),
-                new TrendPoint("23:59", 400, 160)
-        );
-        data.alerts = Arrays.asList(
-                new AlertRow("19:00:22", "US-EAST-1", "CRITICAL", "接口响应超时，延迟超过 5000ms"),
-                new AlertRow("18:45:10", "HKG-2", "WARNING", "系统负载超过 85%，资源紧张")
-        );
+
+        // 模型分布（按调用次数百分比）
+        List<RelayRecordRepository.ModelStat> modelStats = relayRecordRepository.groupByModel();
+        long totalCalls = modelStats.stream().mapToLong(RelayRecordRepository.ModelStat::callCount).sum();
+        String[] colors = {"#00f2ff", "#3b82f6", "#10b981", "#8b5cf6", "#f59e0b", "#ef4444", "#ec4899"};
+        List<ModelShare> modelDistribution = new ArrayList<>();
+        for (int i = 0; i < modelStats.size(); i++) {
+            RelayRecordRepository.ModelStat ms = modelStats.get(i);
+            int pct = totalCalls > 0 ? (int) Math.round(ms.callCount() * 100.0 / totalCalls) : 0;
+            modelDistribution.add(new ModelShare(ms.modelName(), pct, colors[i % colors.length]));
+        }
+        data.modelDistribution = modelDistribution;
+
+        // 趋势（最近 7 天）
+        List<RelayRecordRepository.DayStat> dayStats = relayRecordRepository.groupByDate(7);
+        List<TrendPoint> trends = new ArrayList<>();
+        for (RelayRecordRepository.DayStat ds : dayStats) {
+            trends.add(new TrendPoint(ds.date(), (int) Math.min(ds.totalTokens(), Integer.MAX_VALUE), (int) ds.callCount()));
+        }
+        data.trends = trends;
+
+        data.alerts = Collections.emptyList();
         return data;
     }
 }
